# MA-Trajektorienfolgeregelung

./: .gitignore  README.md  actualPath.pgf  all_laterals_errors.pgf  control_inputs.pgf  readme.md  requirements.txt  traj_errors.csv
workspace/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace/ros2_ws/log/: latest_build
workspace/ros2_ws/src/MPC/: package.xml  setup.cfg  setup.py
workspace/ros2_ws/src/MPC/MPC/: ActualPath.py  DynamicPlots.py  GifPurePursuit.py  MPC_CloseLoop.py  MPC_ClosedLoop.py  MPC_ClosedLoopTrajectory.py  MPC_OpenLoop.py  MPC_OpenLoopTrajectory.py  SaveData.py  SystemModel.py  reformat_csv.py
workspace/ros2_ws/src/MPC_Trajektorienfolgeregelung/: setup.cfg  setup.py
workspace/ros2_ws/src/MPC_Trajektorienfolgeregelung/MPC_Trajektorienfolgeregelung/: .~lock.traj.csv#  CreateTrajectory.py  MPC_Trajektorienfolgeregelung.py  PurePursuit.py  Trajectorytracking.py  mpc_PD_controller.py  mpc_trajectory.py  traj.csv  trajectoryPControllerTime.py
workspace/ros2_ws/src/Trajektorienfolgeregelung/: setup.py
workspace/ros2_ws/src/Trajektorienfolgeregelung/Trajektorienfolgeregelung/: Trajectorytracking.py  trajectoryPControllerTime.py
workspace/ros2_ws/src/imu_calib/: CMakeLists.txt
workspace/ros2_ws/src/imu_calib/src/: accel_calib.cpp  apply_calib.cpp  apply_calib_node.cpp  do_calib.cpp  do_calib_node.cpp
workspace/ros2_ws/src/ldlidar_stl_ros2/launch/: ld19.launch.py
workspace/ros2_ws/src/ldrobot-lidar-ros2/ldlidar_component/: CMakeLists.txt
workspace/ros2_ws/src/ldrobot-lidar-ros2/ldlidar_node/: CMakeLists.txt
workspace/ros2_ws/src/lidar_obstacle_detection/: package.xml  setup.cfg  setup.py
workspace/ros2_ws/src/lidar_obstacle_detection/lidar_obstacle_detection/: obstacle_clustering.py  obstacle_detection_map.py  obstacle_map.py
workspace/ros2_ws/src/mpc_obstacle/: package.xml  setup.cfg  setup.py
workspace/ros2_ws/src/mpc_obstacle/mpc_obstacle/: adaptiveMPC_CL.py  adaptiveMPC_OL.py  mpc_CL_Nc.py  mpc_CL_dynObs.py  (+10 more)
workspace/ros2_ws/src/orchestrator_launch/: CMakeLists.txt  package.xml
workspace/ros2_ws/src/trajektorienfolgeregelung/: setup.cfg  setup.py
workspace/software/lab_tool/: main.py  ui.bk  ui.py  ui.ui
workspace/software/tool/: main.py  tool.desktop  tool.sh
(+622 files in other folders)
